--- a/hugo.toml
+++ b/hugo.toml
@@ -3,7 +3,6 @@ languageCode = "en-us"
 title = "ToolToro — Simple AI tools, explained fast."
 theme = "PaperMod"
 
-# New Hugo pagination config (replaces deprecated `paginate`)
 [pagination]
   pagerSize = 10
 
@@ -34,8 +33,27 @@ buildExpired = false
   Content = "Beginner-friendly stacks, copy-paste prompts, and step-by-step guides to help you ship more in less time."
 
 [menu]
-  [[menu.main]] name = "Start Here" url = "/start/" weight = 1
-  [[menu.main]] name = "Blog" url = "/blog/" weight = 2
-  [[menu.main]] name = "Tools" url = "/tools/" weight = 3
-  [[menu.main]] name = "Prompts" url = "/prompts/" weight = 4
-  [[menu.main]] name = "Disclosure" url = "/disclosure/" weight = 99
+  [[menu.main]]
+    name = "Start Here"
+    url = "/start/"
+    weight = 1
+
+  [[menu.main]]
+    name = "Blog"
+    url = "/blog/"
+    weight = 2
+
+  [[menu.main]]
+    name = "Tools"
+    url = "/tools/"
+    weight = 3
+
+  [[menu.main]]
+    name = "Prompts"
+    url = "/prompts/"
+    weight = 4
+
+  [[menu.main]]
+    name = "Disclosure"
+    url = "/disclosure/"
+    weight = 99
